    one vector in the column direction and another vector in the row direction,
    has been removed. Please use conv2 for such cases.

 ** The function `rgbplot' accepts a style option which alows for a composite
    display of a colormap.

 ** The option to create poisson noise to an image has been added to `imnoise'. 

Summary of important user-visible changes for image 2.0.0:
-------------------------------------------------------------------

 ** The following functions are new:

      analyze75info         imabsdiff         iptcheckconn
      analyze75read         imadd             iptcheckmap
      analyze75write        imbothat          iptchecknargin
      blockproc             imcrop            iptcheckstrs
      bwlabeln              imdivide          iptnum2ordinal
      getrangefromclass     imlincomb         iscolormap
      im2int16              immultiply        normxcorr2
      im2single             imsubtract        wavelength2rgb

 ** The following functions have been deprecated in previous releases
    of the image package and have now been removed:

      imginfo

 ** The function `deriche' has been removed.

 ** The complete set of functions to work with Analyze 7.5 files has been
    implemented. See `analyze75info', `analyze75read' and `analyze75write'.

 ** `graythresh' can optionally accept an histogram rather than an image.  This
    allows for preprocessing of the histogram previous to an automatic threshold
    selection.

 ** Otsu's method for automatic threshold selection (default for `graythresh')
    has been completely rewritten and should perform faster. Now, it can also
    return a second value representing the ``goodness'' of the computed
    threshold value (within class variance).

 ** Alternative algorithms for automatic threshold have been implemented in
    `graythresh' (thanks to Antti Niemistö for releasing HistThresh toolbox 
    http://www.cs.tut.fi/~ant/histthresh/ from where many were ported, under a